components/stream/chat/chat-wrapper/style.module.scss
.channel-root__right-column {
  display: flex;
  flex-direction: column;

  background: hsl(var(--color-hinted-grey-1));

  width: 340px;
  height: 100%;
}

.channel-root__right-column--expanded {
  position: absolute;

  z-index: 1;
}

.chat-shell {
  min-width: 0;
}

.chat-shell__expanded {
  min-width: 340px !important;
}

.stream-chat {
  position: relative;

  display: flex;
  flex-flow: column;
  flex-grow: 1;

  width: 100%;
  height: 100%;
  min-height: 0;
}

